[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eva-exploit"
version = "3.5"
description = "Exploit Vector Agent"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "ARCANGEL0" }
]
dependencies = [
  "colorama>=0.4.6",
  "openai>=1.0.0",
  "requests>=2.31.0"
]

[project.scripts]
eva = "eva:cli"

[tool.setuptools]
py-modules = ["eva", "config"]

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*", "modules*", "sessions*"]
